# ssh-manager

./: .editorconfig  .gitattributes  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod  pyproject.toml
.build/: bootstrap.sh  e2e.sh  feature-check.sh  freeze-engine.sh  sync-data.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
cmd/sshmgr/: main.go
config/: inventory.json  manifest.json
config/schema/: inventory.schema.json  manifest.schema.json
docs/: architecture.md  configuration.md  features.md  installation.md  release.md  shipping-checklist.md
docs/tools/: bundle.md  deploy.md  expiry.md  knownhosts.md  network.md  providers.md  recover.md  rotate.md  tui.md  validate.md  vps.md
internal/cli/: audit.go  bundle.go  config.go  deploy.go  diff.go  doctor.go  expiry.go  host.go  import.go  init.go  keygen.go  knownhosts.go  list.go  load.go  migrate.go  net.go  notify.go  passthrough.go  profile.go  providers.go  reconcile.go  recover.go  root.go  root_test.go  rotate.go  snapshots.go  tui.go  tui_test.go  validate.go  view.go
internal/core/authkeys/: authkeys.go  authkeys_test.go
internal/core/expiry/: expiry.go  expiry_test.go
internal/core/inventory/: inventory.go  inventory_test.go
internal/core/key/: key.go  key_test.go
internal/core/manifest/: manifest.go  manifest_test.go
internal/core/providers/: adapter.go  adapter_test.go  cloud.go  providers.go  providers_test.go  ssh_generic.go  vcs.go
internal/core/renderer/: renderer.go  renderer_test.go
internal/engine/: embed_bundled.go  embed_stub.go  engine.go  engine_test.go
internal/services/agent/: agent.go  agent_test.go
internal/services/query/: query.go  (+1 more)
internal/version/: version.go
scripts/: build-all.sh  install.ps1  install.sh
src/ssh_manager/: __init__.py  __main__.py  cli.py  render.py  tui.py
tests/: conftest.py  test_age_roundtrip.py  test_audit_fixes.py  test_bundle.py  test_cli_yes.py  test_cloud_providers.py  test_deploy.py  test_editor.py  test_expiry.py  test_hardening.py  test_import.py  test_init_perms.py  test_keygen_audit.py  test_knownhosts.py  test_linux.py  test_manifest.py  test_net.py  test_overwrite.py  test_packaging.py  test_paths.py  test_provider_integration.py  test_providers.py  test_query.py  test_reconcile.py  test_recover.py  test_renderer.py  test_robustness.py  test_rotate.py  test_safety.py  test_security.py  test_smoke.py  test_ssh_generic.py  test_tui.py  test_tui_pty.py  test_validate.py  test_windows.py
(+103 files in other folders)
