[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssh-manager"
dynamic = ["version"]
description = "Profile-based SSH key & config lifecycle manager"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Simtabi LLC", email = "opensource@simtabi.com" }]
maintainers = [{ name = "Imani Manyara", email = "imani@simtabi.com" }]
keywords = ["ssh", "ssh-keys", "ssh-config", "key-rotation", "cli", "macos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "questionary>=2",
    "pydantic>=2",
    "python-dotenv>=1",
    "jinja2>=3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10", "ruff>=0.5", "pre-commit>=4.6.0"]

[project.urls]
Homepage = "https://opensource.simtabi.com/products/ssh-manager"
Documentation = "https://opensource.simtabi.com/documentation/ssh-manager"
Repository = "https://github.com/simtabi/ssh-manager"
Issues = "https://github.com/simtabi/ssh-manager/issues"
Changelog = "https://github.com/simtabi/ssh-manager/blob/main/CHANGELOG.md"

[project.scripts]
sshmgr = "ssh_manager.cli:main"

# Single source of version truth: src/ssh_manager/__init__.py::__version__.
[tool.hatch.version]
path = "src/ssh_manager/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_manager"]
# Guarantee shipped data (incl. the .env-example dotfile, which default file
# selectors can drop) so `init` / `recover` can read their templates on a wheel.
artifacts = ["src/ssh_manager/data/*", "src/ssh_manager/data/.env-example"]

[tool.hatch.build.targets.sdist]
artifacts = ["src/ssh_manager/data/*", "src/ssh_manager/data/.env-example"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# typer uses calls in argument defaults as its DI mechanism - that's intentional.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
